feat: implemented login routes and created user table
